--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <div class="container container-sm">
       <h2 class="section-heading">Contact Us</h2>
       <p>Have a question? Leave your information below and we will get back yo you as soon as posible.</p>
-      <form>
+      <form name="contact" netlify>
         <div class="form-group">
           <label for="first-name" class="visually-hidden">First Name</label>
           <input type="text" id="first-name" name="first-name" placeholder="First Name">
@@ -53,6 +53,10 @@
         <div class="form-group">
           <label for="last-name" class="visually-hidden">Last Name</label>
           <input type="text" id="last-name" name="last-name" placeholder="Last Name">
+        </div>
+        <div class="form-group">
+          <label for="email" class="visually-hidden">Email Adress</label>
+          <input type="email" id="email" name="email" placeholder="Email Adress">
         </div>
         <div class="form-group">
           <label for="message" class="visually-hidden">Message</label>
